ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: getting-started-ingress
  namespace: admin-che
spec:
  ingressClassName: nginx
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: getting-started
                port:
                  number: 8080
